fix notification text being cut off

--- a/Zukitwo-Cinnamon/cinnamon/cinnamon.css
+++ b/Zukitwo-Cinnamon/cinnamon/cinnamon.css
@@ -693,7 +693,7 @@ StScrollBar StButton#hhandle:active {
 #notification {
   border-image: url("img/containers/popup.svg") 7;
   padding: 1.3em;
-  spacing-rows: .2em;
+  spacing-rows: .3em;
   spacing-columns: 10px;
   width: 34em;
   margin-from-right-edge-of-screen: 6px;
@@ -711,19 +711,19 @@ StScrollBar StButton#hhandle:active {
 #notification CinnamonGenericContainer *:first-child {
   font-weight: bold;
   font-size: 12px;
-  padding: .3em 0;
+  padding-top: .3em;
   color: rgba(0, 0, 0, 0.9);
 }
 
 #notification CinnamonGenericContainer *:last-child {
-  padding: .4em 0;
+  padding-top: .3em;
   color: rgba(0, 0, 0, 0.9);
 }
 
 #notification-body {
   font-weight: normal;
   font-size: 12px;
-  padding: .5em 0;
+  padding-top: .6em;
 }
 
 #notification-actions {
@@ -873,7 +873,7 @@ StScrollBar StButton#hhandle:active {
 
 #traycontainer #notification {
   border-image: url("img/containers/light-bg-marked-blue.svg") 7;
-  padding: .8em .8em .6em 1em;
+  padding: .8em .8em .8em 1em;
 }
 
 #traycontainer #notification.multi-line-notification {
